@@ -109,6 +109,7 @@ export("+.section",
        "pitch<-",
        ##plot.adp,
        ##plot.adv,
+       plotInset,
        plotTS,
        plot.cm,
        ##plot.coastline,
